@@ -4,7 +4,8 @@ master
 * Adapters::Daybreak: add option :sync to load and store
 * Adapters::LRUHash: add option :max_count
 * Adapters::Mongo: add options :user and :password
-* Adapters::Mongo: Correctly close connections
+* Adapters::Mongo: Correctly close connection
+* Adapters::Redis: Correctly close connection
 * Transformer: add inspect key transformer
 * Added #create method to atomically create entries
 * Added WeakCreate and WeakIncrement proxies
